clusters/in-cluster/dumbkan/resources/dumbpkan-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dumbkan
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dumbkan.bongima.be
    external-dns.alpha.kubernetes.io/target: traefik.bongima.be
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`dumbkan.bongima.be`)
      kind: Rule
      services:
        - name: dumbkan
          port: 3000
